--- a/ByteShop-Admin/Views/Gestion/Pedidos.cshtml
+++ b/ByteShop-Admin/Views/Gestion/Pedidos.cshtml
@@ -180,7 +180,7 @@
 
                         if (response.resultado) {
 
-                            Swal.fire('Correcto', response.mensaje, 'success');
+                            Swal.fire('Entregado', response.mensaje, 'success');
                             tablaPedidos.ajax.reload(null, false);
 
                         } else {
