--- a/ByteShop-Admin/Views/Shared/_Layout.cshtml
+++ b/ByteShop-Admin/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap4.min.css" />
     <!-- SB Admin CSS -->
     <link href="~/css/sb-admin-2.min.css" rel="stylesheet" asp-append-version="true" />
+    <link rel="icon" type="image/svg+xml" href="~/assets/favicon.svg" />
+
     <!--date picker-->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 </head>
@@ -30,8 +32,8 @@
             <!-- Brand -->
             <li class="nav-item text-center">
                 <a class="sidebar-brand d-flex align-items-center justify-content-center" asp-controller="Home" asp-action="Index">
-                    
-                    <div class="sidebar-brand-text mx-3">ByteShop</div>
+
+                    <i class="fas fa-shopping-cart"></i> <div class="sidebar-brand-text mx-3">ByteShop</div>
                 </a>
             </li>
 
